fix loader alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,12 +5,15 @@ body {
 }
 
 .valign-wrapper {
+  flex-direction: row;
+  align-items: center;
+  display: flex;
   min-height:100vh;
   justify-content: center;
 }
 
 .valign-wrapper .valign {
-  //margin-top: -35px;
-  //margin-left: -32px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
